--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div>
                 <article>
                     <div class="portada">
-                        <h3>¿Porque elegir cabañas moxy?</h3>
+                        <h3>¿Porque elegir Cabañas Moxy?</h3>
                         <p class="Mox">
                             Hogareño, confortable, seguro. Un complejo diseñado para que la privacidad y la recreación
                             coexistan.
