--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -64,8 +64,62 @@
     </nav>
 
     <main>
-
+        <section class="container actividadesEntorno">
+            <div class="row  text-center">
+                <div class="col-12 tituloActividades">
+                    <h1>Actividades Recomendadas</h1>
+                    <h5>Turismo Aventura</h5>
+                    <p>Si la aventura está incluida en tu viaje consultá nuestra guía de proveedores de confianza para
+                        que puedas rentar excursiones seguras e inolvidables.</p>
+                </div>
+                <div class="col-4 actividades">
+                    <div class="card">
+                        <img src="../Img/actividad-1.jpg" class="card-img-top" alt="montar">
+                    </div>
+                </div>
+                <div class="col-4 actividades">
+                    <div class="card">
+                        <img src="../Img/actividad-2.jpg" class="card-img-top" alt="subirCerro">
+                    </div>
+                </div>
+                <div class="col-4 actividades">
+                    <div class="card">
+                        <img src="../Img/actividad-3-1.webp" class="card-img-top" alt="remar">
+                    </div>
+                </div>
+                <div class="col-4 actividades">
+                    <div class="card">
+                        <img src="../Img/actividad-4.jpg" class="card-img-top" alt="nadar">
+                    </div>
+                </div>
+                <div class="col-4 actividades">
+                    <div class="card">
+                        <img src="../Img/actividad-5.jpg" class="card-img-top" alt="gastronomia">
+                    </div>
+                </div>
+                <div class="col-4 actividades">
+                    <div class="card">
+                        <img src="../Img/actividad-3-1.webp" class="card-img-top" alt="remar">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- 
+    <aside>
+        <div class="asideContacto">
+            <img class="asideImage" src="../Img/aside1.jpg" alt="">
+            <img class="asideImage" src="../Img/aside2.jpg" alt="">
+            <img class="asideImage" src="../Img/aside3.jpg" alt="">
+            <img class="asideImage" src="../Img/aside4.jpg" alt="">
+            <img class="asideImage" src="../Img/aside5.jpg" alt="">
+            <img class="asideImage" src="../Img/aside6.jpg" alt="">
+            <img class="asideImage" src="../Img/aside7.jpg" alt="">
+            <img class="asideImage" src="../Img/aside8.jpg" alt="">
+        </div>
+    </aside>
+    -->
 
     <footer class="footer">
         <div class="footer__info">
