--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -86,20 +86,54 @@
                 <div class="suiteMatrimonial">
                     <div class="suiteInfo">
                         <h4>SUITE MATRIMONIAL PLUS</h4>
-                        <p>Habitaciòn de 38 mts² I Cama matrimonial de madera (140 x 190) + 1 cama single* I Baño con
+                        <p>Habitaciòn de 38 mts² I Cama matrimonial de madera (140 x 190) + 1 cama single* I Baño
+                            con
                             ducha
                             I Anafe I Heladera frigobar I Microondas I Vajilla basica I Parrilla disponible en el
                             quincho.
-                            *La cama single esta en las triples (disponible para niños o bebes informandolo previamente)
+                            *La cama single esta en las triples (disponible para niños o bebes informandolo
+                            previamente)
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
                     <img src="../Img/habitacion_2.jpg" alt="habitacion2">
                 </div>
+                <div class="mobile">
+                    <div class="card mb-3">
+                        <img src="../Img/habitacion_1.jpg" class="card-img-top" alt="habitacion1">
+                        <div class="card-body">
+                            <h4 class="card-title">SUITE MATRIMONIAL</h4>
+                            <p class="card-text">Habitaciòn de 28 mts² I Cama matrimonial (140 x 190) I Baño con ducha I
+                                Jarra
+                                eléctrica I
+                                Conservadora tipo frigobar I Microondas I Vajilla basica I Parrilla disponible en el
+                                quincho.
+                                (No
+                                disponible para niños o bebes)</p>
+                            <a href="./tarifas.html"> VER PRECIOS </a>
+                        </div>
+                    </div>
+                    <div class="card mb-3">
+                        <img src="../Img/habitacion_2.jpg" class="card-img-top" alt="habitacion2">
+                        <div class="card-body">
+                            <h4 class="card-title">SUITE MATRIMONIAL PLUS</h4>
+                            <p class="card-text">Habitaciòn de 38 mts² I Cama matrimonial de madera (140 x 190) + 1 cama
+                                single* I Baño con
+                                ducha
+                                I Anafe I Heladera frigobar I Microondas I Vajilla basica I Parrilla disponible en el
+                                quincho.
+                                *La cama single esta en las triples (disponible para niños o bebes informandolo
+                                previamente)</p>
+                            <a href="./tarifas.html"> VER PRECIOS </a>
+                        </div>
+                    </div>
+                </div>
                 <div class="NOTA">
-                    <p>NOTA:Las imagenes son ilustrativas. Todas nuestras habitaciones tienen un decorado distinto entre
+                    <p>NOTA:Las imagenes son ilustrativas. Todas nuestras habitaciones tienen un decorado distinto
+                        entre
                         si. El color o tipo de cobertor d e cama puede variar al igual que la disposicion de algun
-                        mobiliario. Algunas habitaciones por su semejanza no estan dentro de las fotos publicadas.</p>
+                        mobiliario. Algunas habitaciones por su semejanza no estan dentro de las fotos publicadas.
+                    </p>
                 </div>
             </article>
         </section>
@@ -122,8 +156,6 @@
                     </div>
                     <img src="../Img/bungalows_1.jpg" alt="cabaña1">
                 </div>
-            </article>
-            <article class="suite">
                 <div class="suiteMatrimonial">
                     <div class="suiteInfo">
                         <h4>BELVEDERE</h4>
@@ -139,8 +171,6 @@
                     </div>
                     <img src="../Img/bungalows_2.jpg" alt="cabaña2">
                 </div>
-            </article>
-            <article class="suite">
                 <div class="suiteMatrimonial">
                     <div class="suiteInfo">
                         <h4>ARMONIA</h4>
@@ -156,8 +186,6 @@
                     </div>
                     <img src="../Img/bungalows_3.jpg" alt="cabaña3">
                 </div>
-            </article>
-            <article class="suite">
                 <div class="suiteMatrimonial">
                     <div class="suiteInfo">
                         <h4>HORIZONTE</h4>
@@ -173,8 +201,6 @@
                     </div>
                     <img src="../Img/bungalows_4.jpg" alt="cabaña4">
                 </div>
-            </article>
-            <article class="suite">
                 <div class="suiteMatrimonial">
                     <div class="suiteInfo">
                         <h4>ATARDECER</h4>
@@ -188,6 +214,76 @@
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
                     <img class="atardecer" src="../Img/bungalows_5.jpg" alt="cabaña5">
+                </div>
+                <div class="mobile">
+                    <div class="card mb-3">
+                        <img src="../Img/bungalows_1.jpg" class="card-img-top" alt="cabaña1">
+                        <div class="card-body">
+                            <h4 class="card-title">PANORAMA</h4>
+                            <p class="card-text">CAPACIDAD 2 PERSONAS (matrimonial)
+                                Bungalow monoambiente.
+                                Cuenta con cocina comedor con horno, anafe, microondas, heladera, vajilla básica y baño.
+                                Área de dormitorio con cama matrimonial (140 x 190).
+                                Terraza exterior con parrilla y sector para mesa.</p>
+                            <a href="./tarifas.html"> VER PRECIOS </a>
+                        </div>
+                    </div>
+                    <div class="card mb-3">
+                        <img src="../Img/bungalows_2.jpg" class="card-img-top" alt="cabaña2">
+                        <div class="card-body">
+                            <h4 class="card-title">BELVEDERE</h4>
+                            <p class="card-text">CAPACIDAD 3 PERSONAS (matrimonial + 1)
+                                Bungalow de dos pisos.
+                                Planta baja con area de living comedor con un diván cama, cocina con horno, anafe,
+                                microondas,
+                                heladera, vajilla basica y baño.
+                                Terraza exterior con parrilla y sector para mesa.
+                                Planta alta con dormitorio matrimonial (140 x 190) + balcón terraza.</p>
+                            <a href="./tarifas.html"> VER PRECIOS </a>
+                        </div>
+                    </div>
+                    <div class="card mb-3">
+                        <img src="../Img/bungalows_3.jpg" class="card-img-top" alt="cabaña3">
+                        <div class="card-body">
+                            <h4 class="card-title">ARMONIA</h4>
+                            <p class="card-text">CAPACIDAD 5 PERSONAS (matrimonial + 3)
+                                Bungalow en dos plantas.
+                                En planta baja Area de living comedor con dos diván cama, cocina con horno, anafe,
+                                microondas,
+                                heladera, vajilla basica y baño.
+                                En planta alta dormitorio matrimonial (140 x 190)| + 1 cama single.
+                                Galeria exterior con parrilla y sector para mesa.</p>
+                            <a href="./tarifas.html"> VER PRECIOS </a>
+                        </div>
+                    </div>
+                    <div class="card mb-3">
+                        <img src="../Img/bungalows_4.jpg" class="card-img-top" alt="cabaña4">
+                        <div class="card-body">
+                            <h4 class="card-title">HORIZONTE</h4>
+                            <p class="card-text">CAPACIDAD 4 PERSONAS (matrimonial + 2)
+                                Bungalow en una planta.
+                                Area de living comedor con un diván cama, cocina con horno, anafe, microondas, heladera,
+                                vajilla
+                                basica y baño.
+                                Dormitorio matrimonial (140 x 190) + una cama single.
+                                Terraza exterior con parrilla y sector para mesa.</p>
+                            <a href="./tarifas.html"> VER PRECIOS </a>
+                        </div>
+                    </div>
+                    <div class="card mb-3">
+                        <img src="../Img/bungalows_5.jpg" class="card-img-top" alt="cabaña5">
+                        <div class="card-body">
+                            <h4 class="card-title">ATARDECER</h4>
+                            <p class="card-text">CAPACIDAD 5 PERSONAS (matrimonial + 3)
+                                Bungalow en dos plantas.
+                                En planta baja Area de living comedor con dos diván cama, cocina con horno, anafe,
+                                microondas,
+                                heladera, vajilla basica y baño.
+                                En planta alta dormitorio matrimonial (140 x 190) + 1 single.
+                                Terraza exterior con parrilla y sector para mesa.</p>
+                            <a href="./tarifas.html"> VER PRECIOS </a>
+                        </div>
+                    </div>
                 </div>
             </article>
             <article>
@@ -223,7 +319,6 @@
             </article>
         </section>
     </main>
-    <hr>
     <footer class="footer">
         <div class="footer__info">
             <h4>Informacion de contacto</h4>
@@ -254,4 +349,5 @@
         crossorigin="anonymous"></script>
 
 </body>
+
 </html>
