--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Ubicacion</title>
+    <title>Tarifas</title>
 </head>
 
 
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"> <img src="../Iconos/logo_2.png" alt="logo moxy"></a>
-            <h1>Moxy</h1>
+            <h1>MOXY</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
