--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,167 +15,202 @@
 </head>
 
 <body>
-    <div id="gridContanto">
-        <header class="enlacesEscritorio">
-            <div class="barraNavegacion">
-                <a href="#">
-                    <img src="../Iconos/logo_2.png" alt="Logo Moxy">
-                </a>
-                <h1>Moxy</h1>
-            </div>
-            <nav>
-                <ul class="enlaces">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./habitaciones.html"> Habitaciones </a></li>
-                    <li><a href="#"> Contacto </a></li>
-                    <li><a href="./actividades.html"> Actividades </a></li>
-                    <li><a href="./tarifas.html"> Tarifas </a></li>
-                </ul>
-            </nav>
-        </header>
 
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"> <img src="../Iconos/logo_2.png" alt="logo moxy"></a>
-                <h1>Moxy</h1>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./habitaciones.html">Habitaciones</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./actividades.html">Actividades</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./tarifas.html">Tarifas</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+    <header class="enlacesEscritorio">
+        <div class="barraNavegacion">
+            <a href="#">
+                <img src="../Iconos/logo_2.png" alt="Logo Moxy">
+            </a>
+            <h1>Moxy</h1>
+        </div>
+        <nav>
+            <ul class="enlaces">
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./habitaciones.html"> Habitaciones </a></li>
+                <li><a href="#"> Contacto </a></li>
+                <li><a href="./actividades.html"> Actividades </a></li>
+                <li><a href="./tarifas.html"> Tarifas </a></li>
+            </ul>
         </nav>
+    </header>
 
-        <div class="mainContact">
-            <section id="seccion1">
-                <h2>Contactanos</h2>
-                <fieldset>
-                    <legend>INGRESE SUS DATOS</legend>
-                    <form class="formulario" action="">
-                        <div>
-                            <label for="Nombre">Nombre:</label>
-                            <input id="Nombre" type="text">
-                        </div>
-                        <div>
-                            <label for="Apellido">Apellido:</label>
-                            <input id="Apellido" type="text">
-                        </div>
-                        <div>
-                            <label for="E-mail">E-mail</label>
-                            <input type="email">
-                        </div>
-                        <div>
-                            <label for="Telefono">Telefono:</label>
-                            <input type="number">
-                        </div>
-                        <div>
-                            <label for="Observaciones">Observaciones:</label>
-                            <br><br>
-                            <textarea name="Observaciones" id="" cols="30" rows="10"></textarea>
-                        </div>
-                        <div>
-                            <label for="Novedades">Deseo Recibir Novedades</label>
-                            <input id="Novedades" type="checkbox">
-                        </div>
-                        <div>
-                            <input type="submit" value="Enviar">
-                        </div>
-                    </form>
-                </fieldset>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"> <img src="../Iconos/logo_2.png" alt="logo moxy"></a>
+            <h1>Moxy</h1>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./habitaciones.html">Habitaciones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./actividades.html">Actividades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./tarifas.html">Tarifas</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <main>
+        <div class="container">
+            <section>
+                <div>
+                    <h2>CONTACTANOS</h2>
+                </div>
+                <form class="row row-cols-1 g-3 mt-3">
+                    <div class="col-12">
+                        <label for="Nombre" class="form-label">Nombre y Apellido:</label>
+                        <input type="text" class="form-control" id="ingreseNombre" placeholder="Ej: Nombre y Apellido">
+                    </div>
+                    <div class="col-6">
+                        <label for="E-mail" class="form-label">E-mail:</label>
+                        <input type="email" class="form-control" id="ingreseEmail" placeholder="Ej: Nombre@dominio.com">
+                    </div>
+                    <div class="col-6">
+                        <label for="Telefono" class="form-label">Teléfono:</label>
+                        <input type="number" class="form-control" id="ingreseNumero"
+                            placeholder="Ej:+54 (223)155-555555">
+                    </div>
+                    <div class="col-6 col-sm-12">
+                        <label for="Ciudad" class="form-label">Ciudad:</label>
+                        <input type="text" class="form-control" id="ingreseCiudad" placeholder="Ej: Ciudad">
+                    </div>
+                    <div class="col-3 col-sm-6">
+                        <label for="Direccion" class="form-label">Dirección:</label>
+                        <input type="text" class="form-control" id="ingreseDireccion" placeholder="Ej: Dirección">
+                    </div>
+                    <div class="col-3 col-sm-6">
+                        <label for="numeroDireccion" class="form-label">Numero:</label>
+                        <input type="number" class="form-control" id="ingreseDireccion" placeholder="Ej: 12345">
+                    </div>
+                    <div class="col-12">
+                        <label for="exampleFormControlTextarea1" class="form-label">Observaciones:</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                            placeholder="Ingrese su mensaje..."></textarea>
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Recibir Novedades</label>
+                    </div>
+                    <div class="col-2">
+                        <button type="submit" class="btn btn-danger">Enviar</button>
+                    </div>
+                </form>
             </section>
-
-            <section id="seccion2">
-                <div class="llegar">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28477.63218807254!2d-65.7292225282011!3d-26.849364668373077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94221877e80d28cf%3A0x7cf806901072e845!2zVGFmw60gZGVsIFZhbGxlLCBUdWN1bcOhbg!5e0!3m2!1ses!2sar!4v1692913319168!5m2!1ses!2sar"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">Ubicacion</iframe>
+            <section>
+                <div class="mapaUbicacion g-3 mt-3">
                     <div class="estamos">
                         <h3>¿Donde estamos?</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero soluta corrupti odit
-                            exercitationem voluptas inventore minima, impedit facilis culpa consectetur, aliquid ut!
-                            Illum, esse nobis quo accusantium totam officiis tenetur!
-                            Unde delectus repellat sapiente ducimus aut pariatur laudantium! Facilis debitis, maxime
-                            similique dolorum quam architecto velit suscipit voluptas consequuntur eos optio quo autem
-                            delectus mollitia nihil dolores officiis! Cupiditate, dolorum.
-                            Enim ex id quos quam sequi! Dolorum eos, sunt veritatis rerum quisquam repellat ullam
-                            expedita eaque quam consequuntur, et pariatur quidem accusamus odio quas odit! Architecto
-                            possimus quisquam laudantium illum.
+                            El complejo se encuentra ubicado en Av. de ejemplo s/n, en la zona de las Cerros,
+                            Potrerillos, a tan solo 70 km de la ciudad de Tafi, a 130 km del centro de Penitentes
+                            y a 30 km de los caminos del vino, es decir, en el centro y de muy fácil acceso a los
+                            principales circuitos turísticos que ofrece la provincia.
                         </p>
-                        <div id="comoLlegar">
-                            <h3>Como llegar</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab iste tenetur suscipit
-                                voluptatibus maxime, ratione, magni dignissimos cumque repudiandae nemo error,
-                                blanditiis eligendi velit ex non eos illum. Placeat, ad!
-                                Iure pariatur corporis labore accusantium, facilis quidem, architecto ex expedita ea
-                                mollitia sequi laboriosam aliquam sapiente, illum omnis nobis dicta molestias. Dicta
-                                temporibus cupiditate non. Modi alias facere molestias veritatis.
-                            </p>
-                        </div>
+                        <p>
+                            Posee una ubicación privilegiada, dentro de un marco de espléndida naturaleza envuelta en la
+                            paz que usted está buscando.
+                        </p>
+                        <h3>Como llegar</h3>
+                        <p>
+                            Potrerillos se encuentra a 63 Km. de la ciudad
+                            de Tafi. A él se llega tomando el Acceso Sur hasta la intersección con la Ruta
+                            Internacional Nº 111 . Luego de un camino montañoso, por el
+                            cual se diviza el dique Poterillos, nos encontramos con la Villa del mismo nombre. Tomando
+                            hacia la derecha es posible ingresar a ella. Una vez dentro de la villa, siguiendo la
+                            rotonda que continua bordeando el dique, hasta divisar una estación de servicio YPF. Pasada
+                            la estación, una segunda rotonda permite regresar a la antigua ruta internacional. A mano
+                            izquierda la policía de la zona, tomando por esta calle, unos … kilometros hacia el norte,
+                            nos encontraremos con una nueva bifurcación del camino. Aquí dos carteles que nos indican
+                            las diferentes zonas de Potrerillos. Siguiendo la ruta que lleva a la zona del Salto,
+                            después de realizar unos pequeños caracoles que se dibujan en el camino y a tan sólo 250
+                            metros, se encuentra a mano derecha, el complejo Cabañas Moxy.
+                        </p>
+                    </div>
+                    <div class="llegar">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28477.63218807254!2d-65.7292225282011!3d-26.849364668373077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94221877e80d28cf%3A0x7cf806901072e845!2zVGFmw60gZGVsIFZhbGxlLCBUdWN1bcOhbg!5e0!3m2!1ses!2sar!4v1692913319168!5m2!1ses!2sar"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">Ubicacion</iframe>
                     </div>
                 </div>
             </section>
         </div>
-        <aside>
-            <div class="asideContacto">
-                <img class="asideImage" src="../Img/aside1.jpg" alt="">
-                <img class="asideImage" src="../Img/aside2.jpg" alt="">
-                <img class="asideImage" src="../Img/aside3.jpg" alt="">
-                <img class="asideImage" src="../Img/aside4.jpg" alt="">
-                <img class="asideImage" src="../Img/aside5.jpg" alt="">
-                <img class="asideImage" src="../Img/aside6.jpg" alt="">
-                <img class="asideImage" src="../Img/aside7.jpg" alt="">
-                <img class="asideImage" src="../Img/aside8.jpg" alt="">
-            </div>
-        </aside>
+    </main>
 
-        <footer class="footer">
-            <div class="footer__info">
-                <h4>Informacion de contacto</h4>
-                <p>Direccion: Calle Falsa 2610</p>
-                <p>Telefono: (223)155-555555</p>
-                <p>E-mail: mipagina@gmail.com</p>
+
+    <!-- RECORDAR FORMULARIO
+        <h2>Contactanos</h2>
+        <legend>INGRESE SUS DATOS</legend>
+        <form class="row">
+            <div>
+                <label for="Nombre">Nombre:</label>
+                <input id="Nombre" type="text">
             </div>
-            <div class="footer__info">
-                <h4>Seguinos</h4>
-                <nav>
-                    <ul class="footer footer__info__link">
-                        <li> <a target="_blank" href="https://www.instagram.com/"><img src="../Iconos/Instagram.png"
-                                    alt="">
-                        </li>
-                        <li><a target="_blank" href="https://www.facebook.com"><img src="../Iconos/Facebook.png"
-                                    alt=""></a>
-                        </li>
-                        <li> <a target="_blank" href="https://twitter.com/"><img src="../Iconos/Twitter.png" alt=""></a>
-                        </li>
-                    </ul>
-                </nav>
+            <div>
+                <label for="Apellido">Apellido:</label>
+                <input id="Apellido" type="text">
             </div>
-            <div class="footer__info">
-                <p>Copyright © 2023 Moxy</p>
+            <div>
+                <label for="E-mail">E-mail</label>
+                <input type="email">
             </div>
-        </footer>
+            <div>
+                <label for="Telefono">Telefono:</label>
+                <input type="number">
+            </div>
+            <div>
+                <label for="Observaciones">Observaciones:</label>
+                <br><br>
+                <textarea name="Observaciones" id="" cols="30" rows="10"></textarea>
+            </div>
+            <div>
+                <label for="Novedades">Deseo Recibir Novedades</label>
+                <input id="Novedades" type="checkbox">
+            </div>
+            <div>
+                <input type="submit" value="Enviar">
+            </div>
+        </form>
+        -->
+
+    <footer class="footer">
+        <div class="footer__info">
+            <h4>Informacion de contacto</h4>
+            <p>Direccion: Calle Falsa 2610</p>
+            <p>Telefono: (223)155-555555</p>
+            <p>E-mail: mipagina@gmail.com</p>
+        </div>
+        <div class="footer__info">
+            <h4>Seguinos</h4>
+            <nav>
+                <ul class="footer footer__info__link">
+                    <li> <a target="_blank" href="https://www.instagram.com/"><img src="../Iconos/Instagram.png" alt="">
+                    </li>
+                    <li><a target="_blank" href="https://www.facebook.com"><img src="../Iconos/Facebook.png" alt=""></a>
+                    </li>
+                    <li> <a target="_blank" href="https://twitter.com/"><img src="../Iconos/Twitter.png" alt=""></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="footer__info">
+            <p>Copyright © 2023 Moxy</p>
+        </div>
+    </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
